--- a/src/App.css
+++ b/src/App.css
@@ -14,3 +14,20 @@
   transform: translateY(-3px);
   transition: all .3s linear;
 }
+
+#contact-section {
+  background-color: #6495ED;
+  color: white;
+}
+
+#contact-btn{
+  color: white;
+  border: 2px solid white;
+  font-weight: bold;
+  border-radius: 0;
+}
+
+#contact-btn:hover {
+  color: #6495ED;
+  background-color: white;
+}
