--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,47 @@
 .App {
   text-align: center;
+  font-size: 1rem;
+}
+
+#hero-section {
+  height: 100vh;
+  /*background-color: grey;
+  clip-path: polygon(0 0,100% 0,100% 80%,0 100%);*/
+}
+
+#hero-section span {
+  color:#6495ED;
+}
+
+#hero-btn {
+  color: #6495ED;
+  border: 2px solid #6495ED;
+  font-weight: bold;
+  border-radius: 0;
+  font-size: 1.5rem;
+}
+
+#hero-btn:hover {
+  color: white;
+  background-color: #6495ED;
+}
+
+
+#contact-section {
+  background-color: #6495ED;
+  color: white;
+}
+
+#contact-btn {
+  color: white;
+  border: 2px solid white;
+  font-weight: bold;
+  border-radius: 0;
+}
+
+#contact-btn:hover {
+  color: #6495ED;
+  background-color: white;
 }
 
 .site-footer {
@@ -15,19 +57,17 @@
   transition: all .3s linear;
 }
 
-#contact-section {
-  background-color: #6495ED;
-  color: white;
-}
+@media only screen
+  and (min-device-width: 768px) 
+  and (max-device-width: 1024px)   {
+    #hero-section h1 {
+      font-size: 3.5rem;
+    }
+  }
 
-#contact-btn{
-  color: white;
-  border: 2px solid white;
-  font-weight: bold;
-  border-radius: 0;
-}
-
-#contact-btn:hover {
-  color: #6495ED;
-  background-color: white;
-}
+  @media screen 
+  and (min-device-width: 1200px)  {
+    #hero-section h1 {
+      font-size: 4.5rem;
+    }
+  }
