--- a/src/App.css
+++ b/src/App.css
@@ -3,6 +3,11 @@
   font-size: 1rem;
 }
 
+p a {
+  text-decoration: underline;
+  color: #fff;
+}
+
 #hero-section {
   height: 100vh;
   /*background-color: grey;
@@ -44,6 +49,44 @@
   background-color: white;
 }
 
+#about-section {
+  background-color: #6495ED;
+  color: #fff;
+}
+
+#profile-img
+{
+    position:relative;
+    -webkit-box-shadow:0 5px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+       -moz-box-shadow:0 5px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+            box-shadow:0 5px 10px rgba(0, 0, 0, 0.3), 0 0 40px rgba(0, 0, 0, 0.1) inset;
+}
+#profile-img:before, #profile-img:after
+{
+  content:"";
+    position:absolute;
+    z-index:-1;
+    -webkit-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    -moz-box-shadow:0 0 20px rgba(0,0,0,0.8);
+    box-shadow:0 0 20px rgba(0,0,0,0.8);
+    top:10px;
+    bottom:10px;
+    left:0;
+    right:0;
+    -moz-border-radius:100px / 10px;
+    border-radius:100px / 10px;
+}
+#profile-img:after
+{
+  right:10px;
+    left:auto;
+    -webkit-transform:skew(8deg) rotate(3deg);
+       -moz-transform:skew(8deg) rotate(3deg);
+        -ms-transform:skew(8deg) rotate(3deg);
+         -o-transform:skew(8deg) rotate(3deg);
+            transform:skew(8deg) rotate(3deg);
+}
+
 .site-footer {
   background-color: #343a40;
 }
@@ -70,4 +113,12 @@
     #hero-section h1 {
       font-size: 4.5rem;
     }
+
+    #about-section {
+      background-color: #6495ED;
+      color: #fff;
+      clip-path: polygon(0 0,100% 0,100% 80%,0 100%);
+      padding-bottom: 10%;
+    }    
+
   }
