--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,11 @@
+html {
+  scroll-behavior: smooth;
+}
+
 .App {
   text-align: center;
   font-size: 1rem;
+  font-family: 'Rubik', sans-serif;
 }
 
 p a {
@@ -52,6 +57,14 @@ p a {
 #about-section {
   background-color: #6495ED;
   color: #fff;
+}
+
+#about-section p {
+  font-size: 1.3rem;
+}
+
+#projects-section p {
+  font-size: 1.2rem;
 }
 
 #profile-img, .project-img
